kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: text-classifier
spec:
  selector:
    app: text-classifier
  ports:
    - port: 80
      targetPort: 8000
